# unite-cosmos

./: Cargo.toml  README.md
resolver/: .gitignore  DEMO_FLOWS.md  README.md  env.example  package-lock.json  package.json  run-demo.js  tsconfig.json
resolver/src/: cosmos-client.ts  ethereum-client.ts  example.test.ts  index.ts  resolver.ts  types.ts  user-operations.ts  utils.ts
resolver/src/flows/: eth-to-osmo.ts  osmo-to-eth.ts
src/: contract.rs  error.rs  execute.rs  factory.rs  lib.rs  msg.rs  query.rs  schema.rs  state.rs
tests/: README.md  comprehensive_test_suite.rs  integration_test.rs  security_tests.rs  timelock_tests.rs
