[package]
name = "escrow-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.4"
cosmwasm-std = "1.4"
cosmwasm-storage = "1.4"
cw-storage-plus = "1.2"
cw2 = "1.1"
cw20 = "1.1.2"
cw-utils = "1.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
sha2 = "0.10"

[dev-dependencies]
anyhow = "1.0"
cosmwasm-schema = "1.4"
cw-multi-test = "0.20"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release.build-override]
opt-level = 0
debug = true 